# myshell

myshell pipes/: CMakeLists.txt  README.md  readme.txt
myshell pipes/inc/operations/: main.h  operations.hpp  parse.h  run_cmd.h
myshell pipes/mycat/: CMakeLists.txt
myshell pipes/mycat/inc/operations/: io_mycat.h
myshell pipes/mycat/src/: io_mycat.cpp  main_mycat.cpp
myshell pipes/myls/: CMakeLists.txt
myshell pipes/myls/inc/operations/: io_myls.h  main_myls.h
myshell pipes/myls/src/: io_myls.cpp  main.cpp
myshell pipes/src/: main.cpp  operations.cpp  parse.cpp  run_cmd.cpp
myshell pipes/src/commands/: dot_cmd.cpp  mcd.cpp  mecho.cpp  merrno.cpp  mexit.cpp  mexport.cpp  mpwd.cpp
